...
                            editingServer = true
                        }
                    }
                },
                modifier = Modifier.fillMaxWidth(),
            ) {
                Text("Sign in")
            }
            if (editingServer) {
                OutlinedTextField(
                    value = server,
                    onValueChange = {
                        server = it
...
